css/webix.css
/* ... */
/*button of pager*/
.webix_view.webix_pager {
  padding: 3px 0;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  background-color: transparent;
}
.webix_scroll_cont > div {
  margin-bottom: 16px;
}
.webix_pager_item,
.webix_pager_item_selected {
  padding: 0 6px;
  text-align: center;
  height: 100%;
  width: auto;
  min-width: 32px;
  margin: 0 2px;
  cursor: pointer;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  border-radius: 2px;
}
.webix_pager_item .webix_icon,
.webix_pager_item_selected .webix_icon {
  line-height: 0;
  font-size: 14px;
}
.webix_pager_item {
  background: #f4f5f9;
  color: #1ca1c1;
}
.webix_pager_item:hover {
  background-color: #e7e9f2;
}
.webix_pager_item:focus {
  background-color: #e7e9f2;
}
.webix_pager_item:active {
  background-color: #daddeb;
}
.webix_pager_item:hover {
  background-color: #e7e9f2;
}
.webix_pager_item:focus {
  background-color: #e7e9f2;
}
.webix_pager_item:active {
  background-color: #daddeb;
}
/*selected  button of pager*/
.webix_pager_item_selected {
  cursor: default;
}
.webix_pager_item_selected:hover {
  background-color: #1992af;
}
.webix_pager_item_selected:focus {
  background-color: #1992af;
}
.webix_pager_item_selected:active {
  background-color: #17839d;
}
.webix_animation .webix_ss_header {
  position: relative;
  z-index: 10;
}
.webix_animation .webix_ss_footer,
.webix_animation .webix_vscroll_x {
  position: absolute;
  bottom: 0px;
  z-index: 10;
}
/*helper for allowing selection*/
.webix_allow_selection {
  -moz-user-select: text;
  -webkit-user-select: text;
  user-select: text;
}
/*default item in dataview*/
.webix_dataview_item {
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  line-height: 31px;
  cursor: pointer;
  border-bottom: 1px solid #edeff0;
  text-align: left;
  border-color: #edeff0;
  border-right: 1px solid #edeff0;
}
.webix_dataview_item.webix_selected {
  box-shadow: inset 2px 0 #1ca1c1;
}
.webix_dataview_item.webix_disabled {
  color: #94a1b3;
}
.webix_dataview_item .webix_icon {
  font-size: 20px;
}
/*default item in selected state*/
.webix_dataview_item.webix_selected {
  color: #475466;
  background: #f4f5f9;
  border-bottom: 1px solid #edeff0;
  border-right: 1px solid #edeff0;
}
.webix_dataview_item.webix_selected:focus {
  background: #edeff5;
}
.webix_dataview_item.webix_invalid {
  background-color: #ffeeee;
}
.webix_dataview_item.tiles {
  border: none;
  padding: 4px;
}
.webix_dataview_item.tiles .webix_dataview_inner_item {
  border: 1px solid #edeff0;
  padding: 2px 12px;
  height: 100%;
}
.webix_dataview_item.tiles.webix_selected,
.webix_dataview_item.tiles.webix_drag_over {
  background: transparent;
}
.webix_dataview_item.tiles.webix_selected .webix_dataview_inner_item {
  background-color: #f4f5f9;
}
.webix_dataview_item.tiles.webix_selected:focus .webix_dataview_inner_item {
  background-color: #edeff5;
}
.webix_dataview_item.tiles.webix_drag_over .webix_dataview_inner_item {
  background: transparent;
}
.webix_dataview .webix_scroll_cont {
  box-sizing: border-box;
}
/*chart container*/
.webix_chart {
  position: relative;
  font-family: Roboto, sans-serif;
  font-size: 13px;
  color: #475466;
  overflow: hidden;
  z-index: 1;
}
.webix_chart canvas {
  position: absolute;
}
/*labels*/
.webix_canvas_text {
  position: absolute;
  text-align: center;
  overflow: hidden;
  white-space: nowrap;
  font-size: 12px;
  z-index: 100;
}
/*map*/
.webix_map_img {
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0px;
  left: 0px;
  border: 0px;
  filter: progid:DXImageTransform.Microsoft.Alpha(opacity=0);
  opacity: 0;
}
/*scales*/
.webix_axis_item_y {
  position: absolute;
  height: 18px;
  line-height: 18px;
  /*line-height:10px;*/
  margin-top: -4px;
  text-align: right;
}
.webix_axis_item_x {
  padding-top: 2px;
}
.webix_axis_title_x {
  text-align: center;
  font-size: 13px;
}
.webix_axis_title_y {
  text-align: center;
  font-family: Verdana;
  font-size: 13px;
  /*safari*/
  -webkit-transform: rotate(-90deg);
  /*firefox*/
  -moz-transform: rotate(-90deg);
  /*opera*/
  -o-transform: rotate(-90deg);
  /*IE9*/
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  padding-left: 3px;
}
.webix_ie_filter {
  /*IE8*/
  filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
}
/*legend block*/
.webix_chart_legend {
  position: absolute;
  z-index: 1000;
}
.webix_chart_legend_item {
  height: 18px;
  line-height: 18px;
  padding: 2px;
  cursor: pointer;
}
.webix_chart_legend_item.hidden {
  color: #cfd5dd;
}
.webix_axis_item_y.webix_radar {
  color: #555;
  font-size: 11px;
  padding-right: 3px;
  height: 13px;
  line-height: 13px;
  margin-top: 0px;
}
.webix_canvas_text.webix_axis_radar_title {
  margin-top: 0px;
  padding-top: 0px;
  color: #74869f;
  font-size: 12px;
}
.webix_axis_item_y,
.webix_axis_item_x {
  color: #74869f;
}
/*data frame*/
.webix_chart_frame {
  background-color: #a0cfef;
  height: 100%;
  opacity: 0.3;
  position: absolute;
  top: 0;
  z-index: 150;
  border-left: 1px solid #3498db;
  border-right: 1px solid #3498db;
  cursor: w-resize;
}
/* ... */

